<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mango</string>
    <string name="action_settings">Settings</string>
    <string name="action_contact">Contact developer</string>

    <string name="pref_category_dnd">Do not disturb</string>
    <string name="pref_title_vibrate">Vibrate mode</string>
    <string name="pref_summary_vibrate">Phone is put into vibrate mode instead of silent.</string>

    <string name="b_away">Away</string>
    <string name="b_busy">Busy</string>
    <string name="b_driving">Driving</string>
    <string name="b_working">Working</string>
    <string name="b_disable">Disable</string>
    <string name="b_custom">Use custom reply</string>

    <string name="t_custom">I am not available right now.</string>

    <string name="s_dnd">Do not disturb</string>

</resources>
