<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <Space
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/space" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_away"
        android:id="@+id/bAway"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/space"
        android:layout_toStartOf="@+id/space"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#e91e63"
        android:textColor="#fff"
        android:layout_marginBottom="10dp"
        android:onClick="onClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_driving"
        android:id="@+id/bDriving"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/space"
        android:layout_toEndOf="@+id/space"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#e91e63"
        android:textColor="#fff"
        android:layout_marginBottom="10dp"
        android:onClick="onClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_busy"
        android:id="@+id/bBusy"
        android:layout_below="@+id/bAway"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/space"
        android:layout_toStartOf="@+id/space"
        android:background="#e91e63"
        android:textColor="#fff"
        android:onClick="onClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_working"
        android:id="@+id/bWorking"
        android:layout_alignTop="@+id/bBusy"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/space"
        android:layout_toEndOf="@+id/space"
        android:background="#e91e63"
        android:textColor="#fff"
        android:onClick="onClick" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sDnd"
        android:text="@string/s_dnd"
        android:layout_below="@+id/bBusy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:checked="false" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_disable"
        android:id="@+id/bDisable"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick"
        android:background="#00ffffff"
        android:layout_toStartOf="@+id/space"
        android:layout_toLeftOf="@+id/space" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/t_custom" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_custom"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/bWorking"
        android:layout_alignStart="@+id/bWorking"
        android:background="#eee" />

</RelativeLayout>
